Gramatica/CobraParser.py
# Generated from Cobra.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CobraParser ( Parser ):

    grammarFileName = "Cobra.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'var'", "'='", "';'", "'+'", "'-'", "'*'", 
                     "'/'", "'('", "')'", "'if'", "'{'", "'}'", "'for'", 
                     "'in'", "'plot'", "'while'", "'func'", "','", "'train_perceptron'", 
                     "'read_file'", "'write_file'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ID", "INT", "FLOAT", "STRING", 
                      "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_variableDeclaration = 2
    RULE_assignment = 3
    RULE_expression = 4
    RULE_controlStructure = 5
    RULE_ifStatement = 6
    RULE_forLoop = 7
    RULE_dataPlotting = 8
    RULE_whileLoop = 9
    RULE_functionDeclaration = 10
    RULE_perceptronTraining = 11
    RULE_fileHandling = 12

    ruleNames =  [ "program", "statement", "variableDeclaration", "assignment", 
                   "expression", "controlStructure", "ifStatement", "forLoop", 
                   "dataPlotting", "whileLoop", "functionDeclaration", "perceptronTraining", 
                   "fileHandling" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    ID=22
    INT=23
    FLOAT=24
    STRING=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CobraParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CobraParser.StatementContext)
            else:
                return self.getTypedRuleContext(CobraParser.StatementContext,i)


        def getRuleIndex(self):
            return CobraParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CobraParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 26
                self.statement()
                self.state = 29 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 33268994) != 0)):
                    break

            self.state = 31
            self.match(CobraParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(CobraParser.VariableDeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(CobraParser.AssignmentContext,0)


        def expression(self):
            return self.getTypedRuleContext(CobraParser.ExpressionContext,0)


        def controlStructure(self):
            return self.getTypedRuleContext(CobraParser.ControlStructureContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(CobraParser.FunctionDeclarationContext,0)


        def perceptronTraining(self):
            return self.getTypedRuleContext(CobraParser.PerceptronTrainingContext,0)


        def dataPlotting(self):
            return self.getTypedRuleContext(CobraParser.DataPlottingContext,0)


        def fileHandling(self):
            return self.getTypedRuleContext(CobraParser.FileHandlingContext,0)


        def getRuleIndex(self):
            return CobraParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = CobraParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 41
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 34
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 35
                self.expression(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 36
                self.controlStructure()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 37
                self.functionDeclaration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 38
                self.perceptronTraining()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 39
                self.dataPlotting()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 40
                self.fileHandling()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CobraParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(CobraParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CobraParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = CobraParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(CobraParser.T__0)
            self.state = 44
            self.match(CobraParser.ID)
            self.state = 45
            self.match(CobraParser.T__1)
            self.state = 46
            self.expression(0)
            self.state = 47
            self.match(CobraParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CobraParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(CobraParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CobraParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = CobraParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(CobraParser.ID)
            self.state = 50
            self.match(CobraParser.T__1)
            self.state = 51
            self.expression(0)
            self.state = 52
            self.match(CobraParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(CobraParser.INT, 0)

        def FLOAT(self):
            return self.getToken(CobraParser.FLOAT, 0)

        def ID(self):
            return self.getToken(CobraParser.ID, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CobraParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CobraParser.ExpressionContext,i)


        def getRuleIndex(self):
            return CobraParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CobraParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                self.state = 55
                self.match(CobraParser.INT)
                pass
            elif token in [24]:
                self.state = 56
                self.match(CobraParser.FLOAT)
                pass
            elif token in [22]:
                self.state = 57
                self.match(CobraParser.ID)
                pass
            elif token in [8]:
                self.state = 58
                self.match(CobraParser.T__7)
                self.state = 59
                self.expression(0)
                self.state = 60
                self.match(CobraParser.T__8)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 69
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CobraParser.ExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                    self.state = 64
                    if not self.precpred(self._ctx, 5):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                    self.state = 65
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 240) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 66
                    self.expression(6) 
                self.state = 71
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ControlStructureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStatement(self):
            return self.getTypedRuleContext(CobraParser.IfStatementContext,0)


        def forLoop(self):
            return self.getTypedRuleContext(CobraParser.ForLoopContext,0)


        def whileLoop(self):
            return self.getTypedRuleContext(CobraParser.WhileLoopContext,0)


        def getRuleIndex(self):
            return CobraParser.RULE_controlStructure

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterControlStructure" ):
                listener.enterControlStructure(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitControlStructure" ):
                listener.exitControlStructure(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitControlStructure" ):
                return visitor.visitControlStructure(self)
            else:
                return visitor.visitChildren(self)




    def controlStructure(self):

        localctx = CobraParser.ControlStructureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_controlStructure)
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.ifStatement()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.forLoop()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.whileLoop()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CobraParser.ExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CobraParser.StatementContext)
            else:
                return self.getTypedRuleContext(CobraParser.StatementContext,i)


        def getRuleIndex(self):
            return CobraParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = CobraParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(CobraParser.T__9)
            self.state = 78
            self.match(CobraParser.T__7)
            self.state = 79
            self.expression(0)
            self.state = 80
            self.match(CobraParser.T__8)
            self.state = 81
            self.match(CobraParser.T__10)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33268994) != 0):
                self.state = 82
                self.statement()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 88
            self.match(CobraParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CobraParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(CobraParser.ExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CobraParser.StatementContext)
            else:
                return self.getTypedRuleContext(CobraParser.StatementContext,i)


        def getRuleIndex(self):
            return CobraParser.RULE_forLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForLoop" ):
                listener.enterForLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForLoop" ):
                listener.exitForLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForLoop" ):
                return visitor.visitForLoop(self)
            else:
                return visitor.visitChildren(self)




    def forLoop(self):

        localctx = CobraParser.ForLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_forLoop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(CobraParser.T__12)
            self.state = 91
            self.match(CobraParser.T__7)
            self.state = 92
            self.match(CobraParser.ID)
            self.state = 93
            self.match(CobraParser.T__13)
            self.state = 94
            self.expression(0)
            self.state = 95
            self.match(CobraParser.T__8)
            self.state = 96
            self.match(CobraParser.T__10)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33268994) != 0):
                self.state = 97
                self.statement()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self.match(CobraParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataPlottingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CobraParser.ID, 0)

        def STRING(self):
            return self.getToken(CobraParser.STRING, 0)

        def expression(self):
            return self.getTypedRuleContext(CobraParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CobraParser.RULE_dataPlotting

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataPlotting" ):
                listener.enterDataPlotting(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataPlotting" ):
                listener.exitDataPlotting(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDataPlotting" ):
                return visitor.visitDataPlotting(self)
            else:
                return visitor.visitChildren(self)




    def dataPlotting(self):

        localctx = CobraParser.DataPlottingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_dataPlotting)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(CobraParser.T__14)
            self.state = 106
            self.match(CobraParser.T__7)
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 107
                self.match(CobraParser.ID)
                pass

            elif la_ == 2:
                self.state = 108
                self.match(CobraParser.STRING)
                pass

            elif la_ == 3:
                self.state = 109
                self.expression(0)
                pass


            self.state = 112
            self.match(CobraParser.T__8)
            self.state = 113
            self.match(CobraParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CobraParser.ExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CobraParser.StatementContext)
            else:
                return self.getTypedRuleContext(CobraParser.StatementContext,i)


        def getRuleIndex(self):
            return CobraParser.RULE_whileLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileLoop" ):
                listener.enterWhileLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileLoop" ):
                listener.exitWhileLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileLoop" ):
                return visitor.visitWhileLoop(self)
            else:
                return visitor.visitChildren(self)




    def whileLoop(self):

        localctx = CobraParser.WhileLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_whileLoop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(CobraParser.T__15)
            self.state = 116
            self.match(CobraParser.T__7)
            self.state = 117
            self.expression(0)
            self.state = 118
            self.match(CobraParser.T__8)
            self.state = 119
            self.match(CobraParser.T__10)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33268994) != 0):
                self.state = 120
                self.statement()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(CobraParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CobraParser.ID)
            else:
                return self.getToken(CobraParser.ID, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CobraParser.StatementContext)
            else:
                return self.getTypedRuleContext(CobraParser.StatementContext,i)


        def getRuleIndex(self):
            return CobraParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDeclaration" ):
                return visitor.visitFunctionDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def functionDeclaration(self):

        localctx = CobraParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_functionDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(CobraParser.T__16)
            self.state = 129
            self.match(CobraParser.ID)
            self.state = 130
            self.match(CobraParser.T__7)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 131
                self.match(CobraParser.ID)
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==18:
                    self.state = 132
                    self.match(CobraParser.T__17)
                    self.state = 133
                    self.match(CobraParser.ID)
                    self.state = 138
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 141
            self.match(CobraParser.T__8)
            self.state = 142
            self.match(CobraParser.T__10)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33268994) != 0):
                self.state = 143
                self.statement()
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 149
            self.match(CobraParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PerceptronTrainingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CobraParser.ID)
            else:
                return self.getToken(CobraParser.ID, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CobraParser.StatementContext)
            else:
                return self.getTypedRuleContext(CobraParser.StatementContext,i)


        def getRuleIndex(self):
            return CobraParser.RULE_perceptronTraining

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPerceptronTraining" ):
                listener.enterPerceptronTraining(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPerceptronTraining" ):
                listener.exitPerceptronTraining(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPerceptronTraining" ):
                return visitor.visitPerceptronTraining(self)
            else:
                return visitor.visitChildren(self)




    def perceptronTraining(self):

        localctx = CobraParser.PerceptronTrainingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_perceptronTraining)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(CobraParser.T__18)
            self.state = 152
            self.match(CobraParser.T__7)
            self.state = 153
            self.match(CobraParser.ID)
            self.state = 154
            self.match(CobraParser.T__17)
            self.state = 155
            self.match(CobraParser.ID)
            self.state = 156
            self.match(CobraParser.T__8)
            self.state = 157
            self.match(CobraParser.T__10)
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33268994) != 0):
                self.state = 158
                self.statement()
                self.state = 163
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 164
            self.match(CobraParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FileHandlingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(CobraParser.STRING, 0)

        def expression(self):
            return self.getTypedRuleContext(CobraParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CobraParser.RULE_fileHandling

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFileHandling" ):
                listener.enterFileHandling(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFileHandling" ):
                listener.exitFileHandling(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFileHandling" ):
                return visitor.visitFileHandling(self)
            else:
                return visitor.visitChildren(self)




    def fileHandling(self):

        localctx = CobraParser.FileHandlingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_fileHandling)
        try:
            self.state = 179
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20]:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.match(CobraParser.T__19)
                self.state = 167
                self.match(CobraParser.T__7)
                self.state = 168
                self.match(CobraParser.STRING)
                self.state = 169
                self.match(CobraParser.T__8)
                self.state = 170
                self.match(CobraParser.T__2)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 171
                self.match(CobraParser.T__20)
                self.state = 172
                self.match(CobraParser.T__7)
                self.state = 173
                self.match(CobraParser.STRING)
                self.state = 174
                self.match(CobraParser.T__17)
                self.state = 175
                self.expression(0)
                self.state = 176
                self.match(CobraParser.T__8)
                self.state = 177
                self.match(CobraParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[4] = self.expression_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expression_sempred(self, localctx:ExpressionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 5)
         




